Chapter06/SalesforceEinsteinVision/src/objects/EinsteinVision__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AccessToken__c</fullName>
        <description>This stores the access token for vision APIs</description>
        <inlineHelpText>This stores the access token for vision APIs</inlineHelpText>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <description>AccountId of Einstein Vision Account</description>
        <inlineHelpText>AccountId of Einstein Vision Account</inlineHelpText>
        <label>AccountId</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExpirationTime__c</fullName>
        <defaultValue>3600</defaultValue>
        <description>Number of seconds that the token will expire from the time it was generated</description>
        <label>ExpirationTime</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrivateKeyName__c</fullName>
        <description>The Name of the File where the private key is stored</description>
        <inlineHelpText>The Name of the File where the private key is stored</inlineHelpText>
        <label>PrivateKeyName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Einstein Vision</label>
</CustomObject>